# ProiectPOO_Depozit

./: .gitignore  Angajat.cpp  Angajat.h  CMakeLists.txt  Client.cpp  Client.h  ClientNonUE.cpp  ClientNonUE.h  ClientUE.cpp  ClientUE.h  Depozit.cpp  Depozit.h  Gestionar.cpp  Gestionar.h  Manipulant.cpp  Manipulant.h  Persoana.cpp  Persoana.h  Picker.cpp  Picker.h  Produs.cpp  Produs.h  ProdusFood.cpp  ProdusFood.h  ProdusFragil.cpp  ProdusFragil.h  ProdusNonFood.cpp  ProdusNonFood.h  ProdusPerisabil.cpp  ProdusPerisabil.h  README.md  main.cpp
